[gd_scene load_steps=6 format=3 uid="uid://bned0gfsf6ht8"]

[ext_resource type="Script" uid="uid://b8cda7pqsj122" path="res://enemy/enemy.gd" id="1_ofsxj"]
[ext_resource type="Texture2D" uid="uid://budytw2byvw47" path="res://enemy/sprites/64x64_faces_011.png" id="2_ofsxj"]
[ext_resource type="AudioStream" uid="uid://btvr2daht07on" path="res://enemy/sfx/horror-premonition-403175.mp3" id="3_ppra6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xv0j0"]
size = Vector2(16, 16)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_abmb4"]
polygon = PackedVector2Array(3.135, -6, -1.865, -7, -6.865, -6, -4.865, 8, 1.135, 8)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 512
collision_mask = 0
script = ExtResource("1_ofsxj")

[node name="sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
top_level = true
position = Vector2(-4.4703484e-07, 4.4703484e-07)
scale = Vector2(0.25000003, 0.25000003)
texture = ExtResource("2_ofsxj")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xv0j0")

[node name="raycast_up" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(0, -16)
collision_mask = 4864

[node name="raycast_down" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(0, 16)
collision_mask = 4864

[node name="raycast_left" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(-16, 0)
collision_mask = 4864

[node name="raycast_right" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(16, 0)
collision_mask = 4864

[node name="raycast_front" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(16, 0)
collision_mask = 4864

[node name="raycast_back" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-16, 0)
collision_mask = 4864

[node name="raycast_east" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, -16)
collision_mask = 4864

[node name="raycast_west" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 16)
collision_mask = 4864

[node name="light_occluder" type="LightOccluder2D" parent="."]
position = Vector2(1.865, 0)
occluder = SubResource("OccluderPolygon2D_abmb4")

[node name="sfx" type="Node" parent="."]

[node name="horror_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("3_ppra6")
bus = &"sfx"
